2006-10-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - Published some more utility classes from pqxx::internal
 src/util.cxx:
  - Don't allocate 5n+1 bytes for escaping; 2n+1 really is enough
 test/test005.cxx, test/test013.cxx, test/test018.cxx, test/test032.cxx,
 test/test056.cxx, test/test060.cxx, test/test061.cxx, test/test064.cxx,
 test/test070.cxx, test/test072.cxx, test/test073.cxx, test/test083.cxx,
 test/test085.cxx, test/test086.cxx:
  - Suppress expected error output from notice processor
  - Correct typo: "existant" should be "existent"
 test/test089.cxx:
  - Account for different ways of detecting nested-transactions capability
2006-10-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.hxx:
  - Removed meaningless const in return type, thanks Jo Ellen Brandmeyer
2006-10-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test090.cxx:
  - Test esc_raw() as well as plain esc()
  - Test nul bytes only with esc_raw(), not with esc()
2006-10-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Fixed typo.  How did this ever come through the regression test?
  - Fixed constness problem in esc_raw() for old libpq versions
 src/subtransaction.cxx:
  - If nested transactions not supported, throw feature_not_supported
 test/test093.cxx:
  - Work around missing PQftableCol() in older libpq versions
2006-09-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, configitems, src/util.cxx, include/pqxx/util.hxx,
 test/test000.cxx:
  - Support "long long" and "unsigned long long" types
  - Redid from_string implementations as template
2006-09-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cachedresult.h:
  - Include pqxx/result, not old pqxx/result.h
 test/test083.cxx
  - Fixed problem found by Visual Studio 8, thanks Xiaofeng Zhao
2006-09-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test085.cxx:
  - Fixed problem found by Visual Studio 8, thanks Xiaofeng Zhao